--- a/src/components/Cover/Cover.module.scss
+++ b/src/components/Cover/Cover.module.scss
@@ -1,10 +1,12 @@
 
 .cover__copy {
-    width: 208vh;
+    width: 100%;
     height: 300px;
     
     position: relative;
-    
+    background-image: url("https://images.unsplash.com/photo-1535557597501-0fee0a500c57?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=3132&q=80");
+    background-size: cover;
+    background-position-y: -20px;
 }
 
 .up{
