--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,10 +1,20 @@
 @import "./../../libs/variables.scss";
 
 .header {
-  padding: 15px $sidePadding;
+  position: fixed;
+  width: 100%;
+  height: 60px;
+  top: 0;
+  padding: 15px 50px;
+
+  align-items: center;
 
   display: flex;
   justify-content: space-between;
+  background-color: $mainDarker;
+  box-shadow: 0 0 15px rgba(34, 19, 6, 0.616);
+
+  color: $mainLighter;
 
   h1 {
     margin: 0;
@@ -17,18 +27,18 @@
 
       a {
         text-decoration: none;
-        color: $main;
         padding: 15px;
         transition: $baseTransition;
+        color: $mainLighter;
 
         &:hover {
           // .header nav ul a:hover { ... }
-          background-color: lighten($main, 40%);
+          background-color: $mainLighter;
+          color: $mainDarker;
         }
 
         &.active {
           background-color: $main;
-          color: $white;
         }
       }
     }
