--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -5,9 +5,9 @@
   width: 100%;
   height: 60px;
   top: 0;
-  padding: 15px 50px;
-
+  
   align-items: center;
+  padding: 30px 50px;
 
   display: flex;
   justify-content: space-between;
@@ -18,6 +18,11 @@
 
   h1 {
     margin: 0;
+    font-family:'Playfair Display', serif;
+    font-size: 45px;
+    font-style: italic;
+    font-weight: 900;
+
   }
 
   nav {
